[greg] fix overlap of messages and sf help box

--- a/src/main/webapp/scripts/css/rnr.css
+++ b/src/main/webapp/scripts/css/rnr.css
@@ -45,7 +45,7 @@
     display: block;
     margin: 0px 90px 0px auto;
     width: 300px;
-    height: 50px;
+    height: 110px;
 }
 
 #cap-message {
